--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,8 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    <meta name="keyword" content="田原隼併,Tahara,Shunpei,ポートフォリオ" />
+    <meta name="description" content="Shunpei Tahara's portfolio site" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Shunpei Tahara</title>
