--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta
+      name="viewport"
+      content="width=device-width, height=device-height, initial-scale=1"
+    />
     <meta name="theme-color" content="#000000" />
     <meta name="keyword" content="田原隼併,Tahara,Shunpei,ポートフォリオ" />
     <meta name="description" content="Shunpei Tahara's portfolio site" />
