--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta
       name="viewport"
-      content="width=device-width, height=device-height, initial-scale=1"
+      content="width=device-width, height=device-height, initial-scale=1.0, user-scalable=no"
     />
     <meta name="theme-color" content="#000000" />
     <meta name="keyword" content="田原隼併,Tahara,Shunpei,ポートフォリオ" />
